# saft

./: .gitignore  .gitmodules  LICENSE  README.md  nvdiffrecmc.sh  patch.diff  requirements.sh
code/cpp/: CMakeLists.txt
code/cpp/include/Solver/: solver.h
code/cpp/python/: bindings.cpp
code/cpp/src/: solver.cpp
code/python/: main.py  metrics.py  scene_content.py
code/python/build_python/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Solver.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cpp_solver.vcxproj  cpp_solver.vcxproj.filters  solver_cpp.vcxproj  solver_cpp.vcxproj.filters
code/python/build_python/Release/: cpp_solver.cp39-win_amd64.pyd  cpp_solver.exp  cpp_solver.lib  solver_cpp.lib
code/python/build_python/charonload/: cmake_configure_command.txt  status_build.txt  status_stub_generation.txt
code/python/build_python/charonload/Release/: checksum.txt  location.txt  windows_dll_directories.txt
code/python/build_python/typings/cpp_solver/: Solver.pyi  (+1 more)
code/python/evaluation/: chamfer_distance.py  evaluation.py  points_to_triangles.py
code/python/material_encoder/: AutoEncoiderSmallerFCUp.py  decoder_optimization.py  fit.json  optimization_functions.py
code/python/objects/: cloth.py
code/python/phases/: general.py  material.py  parameters.py  texture.py
code/python/physics/: bending.py  general.py  pulling.py  pushing.py  solver.py  stretching.py
code/python/rendering/: nvdiffrecmc_renderer.py  rendering.py
code/python/utils/: auxiliary.py  file_manager.py  mesh_utils.py  texture_utils.py
(+73 files in other folders)
